# job_application_helper

./: .cursorignore  .dockerignore  .gitignore  .semgrep.yml  .semgrepignore  LICENSE  README.md  SECURITY.md  SECURITY_CONFIGURATION.md  custom-security-findings.json  docker-compose.cpu-ollama.yml  docker-compose.yml  docker-security-check.json  launch_app-uv.sh  launch_app.bat  launch_app.sh  security-findings.json  security-scan.sh  setup-docker-env.bat  setup-docker-env.sh  setup-local-ollama.sh  setup-uv.sh  setup.bat  setup.sh  start-containers.bat  start-containers.sh  test-validation-fixes.json
.github/workflows/: security-scan.yml
backend/: .gitignore  API_REFERENCE.md  Dockerfile  Dockerfile.uv  docker-compose.uv.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_scripts.sh  run_tests.sh  setup.cfg  start_api.py
backend/scripts/: check_system.py  evaluate_system.py  list_documents.py  performance_test.py  status.py
backend/src/: __init__.py
backend/src/api/: main.py  models.py
backend/src/api/endpoints/: __init__.py  chat.py  documents.py  health.py  keys.py  models.py  ollama.py
backend/src/core/: __init__.py  credentials.py  document_manager.py  document_processor.py  memory_manager.py  prompts.py  query_analyzer.py  simple_chat_controller.py  simple_document_handler.py  simple_document_service.py  storage.py
backend/src/core/llm_providers/: __init__.py  base.py  factory.py  mistral_provider.py  model_config.py  novita_provider.py  ollama_provider.py  openai_provider.py
backend/src/ui/: __init__.py
backend/src/utils/: __init__.py  config.py  logging.py  security.py
backend/tests/: test_api_endpoints.py  test_credentials.py  test_document_manager.py  test_llm_client.py  test_memory_manager.py  test_prompts.py  test_query_analyzer_integration.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ApiKeysSetup.tsx  ApiStatus.tsx  ChatInterface.tsx  CompactSessionManager.tsx  DocumentUpload.tsx  MarkdownRenderer.tsx  OllamaModelManager.tsx
frontend/src/hooks/: use-toast.ts  useApiKeys.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/pages/: Index.tsx
